Fix. DASH-452 Unwrap issues fixes (#927)
* DASH-452 Remove border from fees inputs

* DASH-452 Set default transaction fee for unwrap

* DASH-452 Fix transaction fees title for domain unwrap page

--- a/client/src/components/ConnectWallet/FeesModal/FeesModalInput.module.scss
+++ b/client/src/components/ConnectWallet/FeesModal/FeesModalInput.module.scss
@@ -198,6 +198,7 @@ $tabMargin: 40px;
       color: white;
       width: 100%;
       flex: 1;
+      border: none;
 
       &::placeholder {
         color: inherit;
